--- a/src/scss/components/product/_product-media.scss
+++ b/src/scss/components/product/_product-media.scss
@@ -970,8 +970,12 @@
 
         &__input {
             width: 458px;
-            // padding-bottom: 23px;
-            margin-bottom: 16px;
+
+            // padding-bottom: 23px !important;
+            &-group {
+                margin-bottom: 16px;
+
+            }
         }
 
         &__button {
