--- a/src/scss/vacancies.scss
+++ b/src/scss/vacancies.scss
@@ -21,6 +21,7 @@
 @import "components/benefits";
 @import "components/product/product-benefits";
 @import "components/product/chars";
+@import "components/product/getProject";
 @import "components/vacancies/vacancies-chars";
 @import "components/social";
 @import "components/contactUs";
