--- a/src/views/_includes/blocks/vacancies/chars.pug
+++ b/src/views/_includes/blocks/vacancies/chars.pug
@@ -40,7 +40,7 @@ section.chars.vacanciesChars
                     .mainForm__input-group.vacancy__input-group
                         label(for="vacancy-user-comment").mainForm__label Ваша комментарий
                         input(type="text", id="vacancy-user-comment").mainForm__input.vacancy__input
-                    button.vacancy__addFile Прикрепите ваше резюме
+                    button.vacancy__addFile.addFile Прикрепите ваше резюме
                     button.mainForm__button.button.button--primary.vacancy__button Отправить
                 p.policy.vacancy__policy Отправляя контакты, вы соглашаетесь с <a href="#">политикой конфиденциальности</a>
         
@@ -83,7 +83,7 @@ section.chars.vacanciesChars
                     .mainForm__input-group.vacancy__input-group
                         label(for="vacancy-user-comment").mainForm__label Ваша комментарий
                         input(type="text", id="vacancy-user-comment").mainForm__input.vacancy__input
-                    button.vacancy__addFile Прикрепите ваше резюме
+                    button.vacancy__addFile.addFile Прикрепите ваше резюме
                     button.mainForm__button.button.button--primary.vacancy__button Отправить
                 p.policy.vacancy__policy Отправляя контакты, вы соглашаетесь с <a href="#">политикой конфиденциальности</a>
 
@@ -126,6 +126,6 @@ section.chars.vacanciesChars
                     .mainForm__input-group.vacancy__input-group
                         label(for="vacancy-user-comment").mainForm__label Ваша комментарий
                         input(type="text", id="vacancy-user-comment").mainForm__input.vacancy__input
-                    button.vacancy__addFile Прикрепите ваше резюме
+                    button.vacancy__addFile.addFile Прикрепите ваше резюме
                     button.mainForm__button.button.button--primary.vacancy__button Отправить
                 p.policy.vacancy__policy Отправляя контакты, вы соглашаетесь с <a href="#">политикой конфиденциальности</a>
