--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -178,7 +178,7 @@ strong {
 
             &:focus-within {
                 .mainForm__label {
-                    bottom: 40px;
+                    bottom: 100%;
                     font-size: 12px;
                     color: #181818;
                 }
