--- a/src/scss/components/vacancies/_vacancies-chars.scss
+++ b/src/scss/components/vacancies/_vacancies-chars.scss
@@ -80,31 +80,51 @@
     }
 
     &__addFile {
-        font-size: 16px;
-        line-height: 118.49%;
-        /* identical to box height, or 19px */
-        letter-spacing: 0.035em;
-        color: #585858;
-        padding-left: 5px;
-        display: flex;
-        align-items: center;
-        padding-bottom: 20px;
-        border-bottom: 1px dashed #9D9D9D;
         margin-bottom: 58px;
-        width: 100%;
 
-        &::before {
-            content: '';
-            width: 13px;
-            height: 14px;
-            margin-right: 14px;
-            background: url('../img/vacancies/add-file.svg') no-repeat center / cover;
-            display: inline-block;
-        }
     }
 
     &__policy {
         margin-top: 24px;
         margin-bottom: 36px;
+    }
+}
+
+.addFile {
+    border-bottom: 1px dashed #9D9D9D;
+    font-size: 16px;
+    line-height: 118.49%;
+    /* identical to box height, or 19px */
+    letter-spacing: 0.035em;
+    color: #585858;
+    padding-bottom: 20px;
+    display: flex;
+    align-items: center;
+    padding-left: 5px;
+    width: 100%;
+
+    &::before {
+        content: '';
+        width: 13px;
+        height: 14px;
+        margin-right: 14px;
+        background: url('../img/vacancies/add-file.svg') no-repeat center / cover;
+        display: inline-block;
+    }
+}
+
+.unavalible {
+    .getProject {
+        &__container {
+            background: url('../img/vacancies/form-bg.png') no-repeat center/cover;
+
+            &::after {
+                background-color: rgba(#000000, 0.65);
+            }
+        }
+    }
+
+    &__addFile {
+        margin-bottom: 50px;
     }
 }
