--- a/src/views/_includes/blocks/vacancies/chars.pug
+++ b/src/views/_includes/blocks/vacancies/chars.pug
@@ -29,16 +29,16 @@ section.chars.vacanciesChars
                         label(for="vacancy-user-surname").mainForm__label Ваша фамилия
                         input(type="text", id="vacancy-user-surname").mainForm__input.vacancy__input
                     .mainForm__input-group.vacancy__input-group
-                        label(for="vacancy-user-city").mainForm__label Ваше город
+                        label(for="vacancy-user-city").mainForm__label Ваш город
                         input(type="text", id="vacancy-user-city").mainForm__input.vacancy__input
                     .mainForm__input-group.vacancy__input-group
-                        label(for="vacancy-user-phone").mainForm__label Ваша телефон
+                        label(for="vacancy-user-phone").mainForm__label Ваш телефон
                         input(type="tel", id="vacancy-user-phone").mainForm__input.vacancy__input
                     .mainForm__input-group.vacancy__input-group
-                        label(for="vacancy-user-email").mainForm__label Ваше e-mail
+                        label(for="vacancy-user-email").mainForm__label Ваш e-mail
                         input(type="mail", id="vacancy-user-email").mainForm__input.vacancy__input
                     .mainForm__input-group.vacancy__input-group
-                        label(for="vacancy-user-comment").mainForm__label Ваша комментарий
+                        label(for="vacancy-user-comment").mainForm__label Ваш комментарий
                         input(type="text", id="vacancy-user-comment").mainForm__input.vacancy__input
                     button.vacancy__addFile.addFile Прикрепите ваше резюме
                     button.mainForm__button.button.button--primary.vacancy__button Отправить
@@ -72,16 +72,16 @@ section.chars.vacanciesChars
                         label(for="vacancy-user-surname").mainForm__label Ваша фамилия
                         input(type="text", id="vacancy-user-surname").mainForm__input.vacancy__input
                     .mainForm__input-group.vacancy__input-group
-                        label(for="vacancy-user-city").mainForm__label Ваше город
+                        label(for="vacancy-user-city").mainForm__label Ваш город
                         input(type="text", id="vacancy-user-city").mainForm__input.vacancy__input
                     .mainForm__input-group.vacancy__input-group
-                        label(for="vacancy-user-phone").mainForm__label Ваша телефон
+                        label(for="vacancy-user-phone").mainForm__label Ваш телефон
                         input(type="tel", id="vacancy-user-phone").mainForm__input.vacancy__input
                     .mainForm__input-group.vacancy__input-group
-                        label(for="vacancy-user-email").mainForm__label Ваше e-mail
+                        label(for="vacancy-user-email").mainForm__label Ваш e-mail
                         input(type="mail", id="vacancy-user-email").mainForm__input.vacancy__input
                     .mainForm__input-group.vacancy__input-group
-                        label(for="vacancy-user-comment").mainForm__label Ваша комментарий
+                        label(for="vacancy-user-comment").mainForm__label Ваш комментарий
                         input(type="text", id="vacancy-user-comment").mainForm__input.vacancy__input
                     button.vacancy__addFile.addFile Прикрепите ваше резюме
                     button.mainForm__button.button.button--primary.vacancy__button Отправить
@@ -115,16 +115,16 @@ section.chars.vacanciesChars
                         label(for="vacancy-user-surname").mainForm__label Ваша фамилия
                         input(type="text", id="vacancy-user-surname").mainForm__input.vacancy__input
                     .mainForm__input-group.vacancy__input-group
-                        label(for="vacancy-user-city").mainForm__label Ваше город
+                        label(for="vacancy-user-city").mainForm__label Ваш город
                         input(type="text", id="vacancy-user-city").mainForm__input.vacancy__input
                     .mainForm__input-group.vacancy__input-group
-                        label(for="vacancy-user-phone").mainForm__label Ваша телефон
+                        label(for="vacancy-user-phone").mainForm__label Ваш телефон
                         input(type="tel", id="vacancy-user-phone").mainForm__input.vacancy__input
                     .mainForm__input-group.vacancy__input-group
-                        label(for="vacancy-user-email").mainForm__label Ваше e-mail
+                        label(for="vacancy-user-email").mainForm__label Ваш e-mail
                         input(type="mail", id="vacancy-user-email").mainForm__input.vacancy__input
                     .mainForm__input-group.vacancy__input-group
-                        label(for="vacancy-user-comment").mainForm__label Ваша комментарий
+                        label(for="vacancy-user-comment").mainForm__label Ваш комментарий
                         input(type="text", id="vacancy-user-comment").mainForm__input.vacancy__input
                     button.vacancy__addFile.addFile Прикрепите ваше резюме
                     button.mainForm__button.button.button--primary.vacancy__button Отправить
