--- a/src/views/_includes/blocks/vacancies/unavalible.pug
+++ b/src/views/_includes/blocks/vacancies/unavalible.pug
@@ -13,7 +13,7 @@ section.unavalible
               label(for="unavalible-user-tel").mainForm__label Ваш телефон
               input(type="tel", id="unavalible-user-tel").mainForm__input.getProject__input 
           .mainForm__input-group.getProject__input-group
-              label(for="unavalible-user-surname").mainForm__label Ваша комментарий
+              label(for="unavalible-user-surname").mainForm__label Ваш комментарий
               input(type="text", id="unavalible-user-surname").mainForm__input.getProject__input   
           button.addFile.unavalible__addFile Прикрепите ваше резюме
           button.mainForm__button.button.button--dark.getProject__button Отправить
