--- a/src/scss/components/vacancies/_vacancies-media.scss
+++ b/src/scss/components/vacancies/_vacancies-media.scss
@@ -60,6 +60,10 @@
 
         }
 
+        &__button {
+            padding: 23px 0;
+        }
+
 
     }
 
@@ -93,6 +97,12 @@
 }
 
 @media(min-width: 1280px) {
+    #vacancies {
+        .benefits2 {
+            padding-bottom: 10px;
+        }
+    }
+
     .vacanciesHero {
         .hero {
             &__container {
