--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -2887,6 +2887,10 @@
             padding-bottom: 25px;
         }
 
+        .mainForm__label {
+            left: 28px;
+        }
+
         &__button {
             margin-top: 22px;
             margin-bottom: 23px;
