--- a/src/scss/components/vacancies/_vacancies-hero.scss
+++ b/src/scss/components/vacancies/_vacancies-hero.scss
@@ -51,5 +51,20 @@
                 display: block;
             }
         }
+
+        &__stats {
+            text-transform: uppercase;
+            display: flex;
+            justify-content: center;
+
+            // width: 50%;
+            &-date {
+                margin-right: 10px;
+            }
+
+            &-views {
+                margin-left: 10px;
+            }
+        }
     }
 }
