--- a/src/views/content.pug
+++ b/src/views/content.pug
@@ -22,6 +22,18 @@ html(lang="ru", class="no-js")
                 block advantages
                     include _includes/blocks/content/advantages
 
+                block popular
+                    include _includes/blocks/content/popular
+
+                block getProject
+                    include _includes/blocks/product/getProject
+
+                block more
+                    include _includes/blocks/content/more
+
+                block benefits2
+                    include _includes/blocks/product/benefits2
+
               
                
                
