--- a/src/scss/contentPage.scss
+++ b/src/scss/contentPage.scss
@@ -21,10 +21,12 @@
 @import "components/product/product-hero";
 @import "components/content/gallery.scss";
 @import "components/content/advantages.scss";
+@import "components/product/others";
 @import "components/models";
 @import "components/benefits";
 @import "components/product/getProject";
 @import "components/contactUs";
+@import "components/product/product-benefits";
 @import "components/social";
 @import "components/footer";
 @import "components/articles";
