--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -284,7 +284,7 @@
         &__swiper-slide {
             width: 100% !important;
             flex-wrap: wrap;
-            // justify-content: center;
+            justify-content: center;
             max-width: 768px;
             margin-left: auto;
             margin-right: auto;
