--- a/src/scss/components/news/_news-media.scss
+++ b/src/scss/components/news/_news-media.scss
@@ -1,6 +1,23 @@
 @media(min-width:768px) {
     #news {
         background-color: #FFFFFF !important;
+
+        .articles {
+            display: none;
+        }
+
+        .projects__info-name {
+            font-size: 25px !important;
+            text-transform: none;
+            line-height: 31px;
+            letter-spacing: normal;
+        }
+
+        .projects__info {
+            padding-top: 38px !important;
+            padding-bottom: 38px !important;
+            width: 503px !important;
+        }
     }
 
     .newsCards {
@@ -22,6 +39,46 @@
         }
     }
 
+    .newsCards2 {
+        display: block;
+
+    }
+
+    // .news__swiper-slide {
+    //     margin-right: 10px;
+    // }
+
+    .news__swiper-container {
+        padding-bottom: 110px;
+
+    }
+
+    .news__container {
+        max-width: 768px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    // .news__swiper-slide 
+
+    .news__swiper-button {
+
+        &-next,
+        &-prev {
+            top: 96% !important;
+
+        }
+
+        &-next {
+            right: 0px !important;
+        }
+
+        &-prev {
+            right: 70px !important;
+            left: auto !important;
+        }
+    }
+
     .newsProjects2 {
         &__wrap {
             width: 768px !important;
@@ -40,6 +97,34 @@
 
 
 @media(min-width:1280px) {
+    #news {
+        .projects__info {
+            padding-top: 42px !important;
+            padding-bottom: 33px !important;
+            width: 503px !important;
+
+            &-name {
+                width: 396px !important;
+            }
+        }
+    }
+
+    .news__container {
+        max-width: 1170px;
+        // margin-left: auto;
+        // margin-right: auto;
+    }
+
+    .news__swiper-button {
+
+        &-next,
+        &-prev {
+            top: 95% !important;
+
+        }
+
+    }
+
     .newsCards {
 
 
@@ -71,6 +156,10 @@
         }
     }
 
+
+
+
+
     .newsProjects2 {
         &__wrap {
             width: 1295px !important;
@@ -82,6 +171,35 @@
 }
 
 @media(min-width:1920px) {
+    #news {
+        .projects__info {
+            left: 68px;
+            padding-top: 38px !important;
+            padding-bottom: 33px !important;
+            width: 487px !important;
+
+            &-name {
+                width: 396px !important;
+            }
+        }
+    }
+
+    .news__container {
+        max-width: 1620px;
+        // margin-left: auto;
+        // margin-right: auto;
+    }
+
+    .news__swiper {
+        &-button {
+
+            &-prev,
+            &-next {
+                top: 94% !important;
+            }
+        }
+    }
+
     .newsCards {
         &__block {
             display: flex;
