--- a/src/views/_includes/blocks/news/cards2.pug
+++ b/src/views/_includes/blocks/news/cards2.pug
@@ -59,12 +59,13 @@ section.leader.catalogLeader.newsLeader
       span.leader__info-job дизайнер КухниСити
     .leader__block
       .leader__text Кухня — самое важное место в квартире. Здесь заряжаются для&nbsp;нового дня и проводят вечер в кругу семьи, встречают гостей и готовят вместе с детьми. Давайте вместе создадим дизайн кухни вашей мечты.
-      .leader__button2.button.button--dark Бесплатный дизайн проект
       
-section.newsCards 
-  .container.newsCards__container
-      .newsCards__block
-        a(href="#").articles__card.articles__card--full
+section.articles
+  .container.articles__container
+    .swiper-container.articles__swiper-container
+      .swiper-wrapper.articles__swiper-wrapper
+        .swiper-slide.articles__swiper-slide
+          a(href="#").articles__card.articles__card--full
             picture.articles__card-img
               source(media="(min-width: 320px)", srcset="assets/img/articles/photo1.webp", type="image/webp")
               source(media="(min-width: 320px)", srcset="assets/img/articles/photo1.png", type="image/png")
@@ -72,24 +73,119 @@ section.newsCards
             .articles__card-label.articles__card-label--kitchens кухни
             span.articles__card-date 10 марта 2020
             p.articles__card-description Хочу всё и сразу — как купить кухню в рассрочку и не переплатить ни копейки
-        .newsCards__wrap
-          .articles__card
-              picture.articles__card-img
-                source(media="(min-width: 320px)", srcset="assets/img/articles/winter.webp", type="image/webp")
-                source(media="(min-width: 320px)", srcset="assets/img/articles/winter.jpg", type="image/jpg")
-                img(src="assets/img/articles/photo2.png", alt="photo")
-              .articles__card-label сезон
-              p.articles__card-description Последний день зимы в Казани
-              a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
 
+        .swiper-slide.articles__swiper-slide
           .articles__card
-              picture.articles__card-img
-                source(media="(min-width: 320px)", srcset="assets/img/articles/winter.webp", type="image/webp")
-                source(media="(min-width: 320px)", srcset="assets/img/articles/winter.png", type="image/jpg")
-                img(src="assets/img/articles/photo3.png", alt="photo")
-              .articles__card-label сезон
-              p.articles__card-description Последний день зимы в Казани
-              a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
+            picture.articles__card-img
+              source(media="(min-width: 320px)", srcset="assets/img/articles/winter.webp", type="image/webp")
+              source(media="(min-width: 320px)", srcset="assets/img/articles/winter.jpg", type="image/jpg")
+              img(src="assets/img/articles/photo2.png", alt="photo")
+            .articles__card-label сезон
+            p.articles__card-description Последний день зимы в Казани
+            a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
+          
+          .articles__card
+            picture.articles__card-img
+              source(media="(min-width: 320px)", srcset="assets/img/articles/winter.webp", type="image/webp")
+              source(media="(min-width: 320px)", srcset="assets/img/articles/winter.png", type="image/jpg")
+              img(src="assets/img/articles/photo3.png", alt="photo")
+            .articles__card-label сезон
+            p.articles__card-description Последний день зимы в Казани
+            a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
+
+        .swiper-slide.articles__swiper-slide
+          .articles__card
+            picture.articles__card-img
+              source(media="(min-width: 320px)", srcset="assets/img/articles/photo3.webp", type="image/webp")
+              source(media="(min-width: 320px)", srcset="assets/img/articles/photo3.png", type="image/png")
+              img(src="assets/img/articles/photo2.png", alt="photo")
+            .articles__card-label экономия
+            p.articles__card-description Мастер-класс по выбору кухни
+            a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
+          
+          .articles__card
+            picture.articles__card-img
+              source(media="(min-width: 320px)", srcset="assets/img/articles/photo3.webp", type="image/webp")
+              source(media="(min-width: 320px)", srcset="assets/img/articles/photo3.png", type="image/png")
+              img(src="assets/img/articles/photo3.png", alt="photo")
+            .articles__card-label сезон
+            p.articles__card-description Мастер-класс по выбору кухни
+            a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
+      
+      .swiper-button-prev.articles__swiper-button-prev
+      .swiper-button-next.articles__swiper-button-next
+
+    .button.articles__button.button--bordered Посмотреть все
+
+section.newsCards.newsCards2
+  .news__container.container 
+      .swiper-container.news__swiper-container
+        .swiper-wrapper.news__swiper-wrapper
+          .swiper-slide.news__swiper-slide
+             .newsCards__block
+                a(href="#").articles__card.articles__card--full
+                    picture.articles__card-img
+                      source(media="(min-width: 320px)", srcset="assets/img/articles/photo1.webp", type="image/webp")
+                      source(media="(min-width: 320px)", srcset="assets/img/articles/photo1.png", type="image/png")
+                      img(src="assets/img/articles/photo1.png", alt="photo")
+                    .articles__card-label.articles__card-label--kitchens кухни
+                    span.articles__card-date 10 марта 2020
+                    p.articles__card-description Хочу всё и сразу — как купить кухню в рассрочку и не переплатить ни копейки
+                .newsCards__wrap
+                  .articles__card
+                      picture.articles__card-img
+                        source(media="(min-width: 320px)", srcset="assets/img/articles/winter.webp", type="image/webp")
+                        source(media="(min-width: 320px)", srcset="assets/img/articles/winter.jpg", type="image/jpg")
+                        img(src="assets/img/articles/photo2.png", alt="photo")
+                      .articles__card-label сезон
+                      p.articles__card-description Последний день зимы в Казани
+                      a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
+
+                  .articles__card
+                      picture.articles__card-img
+                        source(media="(min-width: 320px)", srcset="assets/img/articles/winter.webp", type="image/webp")
+                        source(media="(min-width: 320px)", srcset="assets/img/articles/winter.png", type="image/jpg")
+                        img(src="assets/img/articles/photo3.png", alt="photo")
+                      .articles__card-label сезон
+                      p.articles__card-description Последний день зимы в Казани
+                      a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
+
+          .swiper-slide.news__swiper-slide
+              .newsCards__block
+                  a(href="#").articles__card.articles__card--full
+                      picture.articles__card-img
+                        source(media="(min-width: 320px)", srcset="assets/img/articles/photo1.webp", type="image/webp")
+                        source(media="(min-width: 320px)", srcset="assets/img/articles/photo1.png", type="image/png")
+                        img(src="assets/img/articles/photo1.png", alt="photo")
+                      .articles__card-label.articles__card-label--kitchens кухни
+                      span.articles__card-date 10 марта 2020
+                      p.articles__card-description Хочу всё и сразу — как купить кухню в рассрочку и не переплатить ни копейки
+                  .newsCards__wrap
+                    .articles__card
+                        picture.articles__card-img
+                          source(media="(min-width: 320px)", srcset="assets/img/articles/winter.webp", type="image/webp")
+                          source(media="(min-width: 320px)", srcset="assets/img/articles/winter.jpg", type="image/jpg")
+                          img(src="assets/img/articles/photo2.png", alt="photo")
+                        .articles__card-label сезон
+                        p.articles__card-description Последний день зимы в Казани
+                        a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
+
+                    .articles__card
+                        picture.articles__card-img
+                          source(media="(min-width: 320px)", srcset="assets/img/articles/winter.webp", type="image/webp")
+                          source(media="(min-width: 320px)", srcset="assets/img/articles/winter.png", type="image/jpg")
+                          img(src="assets/img/articles/photo3.png", alt="photo")
+                        .articles__card-label сезон
+                        p.articles__card-description Последний день зимы в Казани
+                        a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button   
+
+          
+
+        .swiper-button-prev.news__swiper-button-prev.articles__swiper-button-prev
+        .swiper-button-next.news__swiper-button-next.articles__swiper-button-next
+
+      .button.articles__button.button--bordered Посмотреть все 
+
 
 section.benefits2
   .container.benefits__container
