--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -3663,6 +3663,7 @@
 
         &__container {
             max-width: 1920px;
+            margin-left: 0;
             padding-left: 158px;
             padding-bottom: 300px;
         }
