--- a/src/views/_includes/blocks/articles.pug
+++ b/src/views/_includes/blocks/articles.pug
@@ -55,6 +55,54 @@
           .articles__card-label сезон
           p.articles__card-description Мастер-класс по выбору кухни
           a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
+
+      .swiper-slide.articles__swiper-slide
+        a(href="#").articles__card.articles__card--full
+          picture.articles__card-img
+            source(media="(min-width: 320px)", srcset="assets/img/articles/photo1.webp", type="image/webp")
+            source(media="(min-width: 320px)", srcset="assets/img/articles/photo1.png", type="image/png")
+            img(src="assets/img/articles/photo1.png", alt="photo")
+          .articles__card-label.articles__card-label--kitchens кухни
+          span.articles__card-date 10 марта 2020
+          p.articles__card-description Хочу всё и сразу — как купить кухню в рассрочку и не переплатить ни копейки
+
+      .swiper-slide.articles__swiper-slide
+        .articles__card
+          picture.articles__card-img
+            source(media="(min-width: 320px)", srcset="assets/img/articles/winter.webp", type="image/webp")
+            source(media="(min-width: 320px)", srcset="assets/img/articles/winter.jpg", type="image/jpg")
+            img(src="assets/img/articles/photo2.png", alt="photo")
+          .articles__card-label сезон
+          p.articles__card-description Последний день зимы в Казани
+          a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
+        
+        .articles__card
+          picture.articles__card-img
+            source(media="(min-width: 320px)", srcset="assets/img/articles/winter.webp", type="image/webp")
+            source(media="(min-width: 320px)", srcset="assets/img/articles/winter.png", type="image/jpg")
+            img(src="assets/img/articles/photo3.png", alt="photo")
+          .articles__card-label сезон
+          p.articles__card-description Последний день зимы в Казани
+          a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
+
+      .swiper-slide.articles__swiper-slide
+        .articles__card
+          picture.articles__card-img
+            source(media="(min-width: 320px)", srcset="assets/img/articles/photo3.webp", type="image/webp")
+            source(media="(min-width: 320px)", srcset="assets/img/articles/photo3.png", type="image/png")
+            img(src="assets/img/articles/photo2.png", alt="photo")
+          .articles__card-label экономия
+          p.articles__card-description Мастер-класс по выбору кухни
+          a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
+        
+        .articles__card
+          picture.articles__card-img
+            source(media="(min-width: 320px)", srcset="assets/img/articles/photo3.webp", type="image/webp")
+            source(media="(min-width: 320px)", srcset="assets/img/articles/photo3.png", type="image/png")
+            img(src="assets/img/articles/photo3.png", alt="photo")
+          .articles__card-label сезон
+          p.articles__card-description Мастер-класс по выбору кухни
+          a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
     
     .swiper-button-prev.articles__swiper-button-prev
     .swiper-button-next.articles__swiper-button-next
