--- a/src/scss/components/news/_news-media.scss
+++ b/src/scss/components/news/_news-media.scss
@@ -54,9 +54,18 @@
     }
 
     .news__container {
-        max-width: 768px;
+        max-width: 100%;
         margin-left: auto;
         margin-right: auto;
+        padding-right: 0;
+    }
+
+    .news__swiper-slide {
+        width: 672px !important;
+    }
+
+    .news__swiper-wrapper {
+        width: 672px !important;
     }
 
     // .news__swiper-slide 
@@ -69,14 +78,14 @@
 
         }
 
-        &-next {
-            right: 0px !important;
-        }
+        // &-next {
+        //     right: 0px !important;
+        // }
 
-        &-prev {
-            right: 70px !important;
-            left: auto !important;
-        }
+        // &-prev {
+        //     right: 70px !important;
+        //     left: auto !important;
+        // }
     }
 
     .newsProjects2 {
@@ -109,10 +118,16 @@
         }
     }
 
-    .news__container {
-        max-width: 1170px;
-        // margin-left: auto;
-        // margin-right: auto;
+    .news {
+        &__swiper {
+            &-slide {
+                width: 1170px !important;
+            }
+
+            &-wrapper {
+                width: 1170px !important;
+            }
+        }
     }
 
     .news__swiper-button {
@@ -182,15 +197,25 @@
                 width: 396px !important;
             }
         }
+
+        .leader__container {
+            max-width: 1920px !important;
+            margin-left: auto !important;
+            margin-right: auto !important;
+        }
     }
 
-    .news__container {
-        max-width: 1620px;
-        // margin-left: auto;
-        // margin-right: auto;
-    }
+
 
     .news__swiper {
+        &-slide {
+            width: 1620px !important;
+        }
+
+        &-wrapper {
+            width: 1620px !important;
+        }
+
         &-button {
 
             &-prev,
@@ -204,6 +229,7 @@
         &__block {
             display: flex;
             flex-direction: row;
+            align-items: flex-end;
         }
 
         .articles {
