--- a/src/scss/components/_articles.scss
+++ b/src/scss/components/_articles.scss
@@ -215,4 +215,18 @@
     &__button {
         display: none;
     }
+
+    &__block {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+
+    }
+}
+
+.newsCards__container {
+    .articles__card {
+        margin-bottom: 20px !important;
+    }
 }
