--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -146,6 +146,12 @@ strong {
 
 }
 
+.content {
+    max-width: 2400px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .mainForm {
     // justify-content: space-between;
     // display: flex;
