--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -146,11 +146,11 @@ strong {
 
 }
 
-.content {
-    max-width: 2400px;
-    margin-left: auto;
-    margin-right: auto;
-}
+// .content {
+//     max-width: 2400px;
+//     margin-left: auto;
+//     margin-right: auto;
+// }
 
 .mainForm {
     // justify-content: space-between;
@@ -337,6 +337,8 @@ strong {
 }
 
 .status {
+    padding-top: 25px;
+    padding-bottom: 25px;
     font-size: 12px;
     line-height: 15px;
 
