--- a/src/views/_includes/blocks/header.pug
+++ b/src/views/_includes/blocks/header.pug
@@ -731,4 +731,4 @@ header.header
     .container.header__container
       button.header__block-open каталог
       a(href="index.html").header__logo 
-      button.header-button.header__block-button РАссчитать кухню
+      button.header-button.header__block-button(data-fancybox, data-src="#modal") РАссчитать кухню
