--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -1,13 +1,25 @@
 .modal {
     // position: fixed;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(#000000, 0.5);
-    z-index: 10000;
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    // width: 100%;
+    // height: 100%;
+    // background-color: rgba(#000000, 0.5);
+    // z-index: 10000;
     display: none;
+
+    .fancybox-close-small {
+        right: 27px !important;
+        top: 27px !important;
+        // width: 27px !important;
+        // height: 27px !important;
+
+        path {
+            fill: #000000 !important;
+
+        }
+    }
 
 
     .policy a {
@@ -33,10 +45,10 @@
         padding-left: 25px;
         padding-right: 25px;
         // margin-top: 80px;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        position: relative;
+        // top: 50%;
+        // left: 50%;
+        // transform: translate(-50%, -50%);
     }
 
     &__title {
@@ -52,8 +64,7 @@
 
     &__close {
         position: absolute;
-        right: 27px;
-        top: 27px;
+        display: none;
         font-size: 40px;
         transform: rotate(45deg);
     }
